--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 @font-face {
     font-family: OpenSans;
     src: url(Fonts/Open_Sans/OpenSans-Regular.ttf);
-    font-weight: normal;
+    font-weight: lighter;
 }
 
 @font-face {
@@ -131,7 +131,7 @@
 
 .textCont h3{
 
-font-family: Open Sans;
+font-family: OpenSans;
 font-style: normal;
 font-weight: 300;
 font-size: 24px;
@@ -143,7 +143,7 @@ margin-top: 0%; margin-bottom: 1%;
 }
 
 h4{
-    font-family: Open Sans;
+    font-family: OpenSans;
     font-style: normal;
     font-weight: 300;
     font-size: 18px;
@@ -570,13 +570,13 @@ footer{
     .pinkbtn{
         width: 90px;
         height: 24px;
-        font-size: 10px;
+        font-size: 9px;
     }
 
     .whitebtn{
         width: 90px;
         height: 24px;
-        font-size: 10px;
+        font-size: 9px;
     }
 
 
